[gd_scene load_steps=13 format=3 uid="uid://bq8vvt25vbrrm"]

[ext_resource type="FontFile" uid="uid://necg7x20p4rk" path="res://fonts/PixeloidSans-Bold.ttf" id="1_1jgr7"]
[ext_resource type="Script" path="res://autoload/ui/pickup/pickup.gd" id="1_nbafx"]
[ext_resource type="FontFile" uid="uid://cbhtjy8qjsvwf" path="res://fonts/PixeloidSans.ttf" id="1_q5a53"]
[ext_resource type="Shader" uid="uid://vl34mwjdwx3u" path="res://autoload/ui/pickup/pickup.tres" id="1_tnaun"]
[ext_resource type="Script" path="res://autoload/ui/pickup/yesnobutton.gd" id="3_vs0id"]
[ext_resource type="PackedScene" uid="uid://dbcxp6cit6pdr" path="res://autoload/ui/item_list/item_list.tscn" id="5_scqo5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_k5yah"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xfqmf"]
shader = ExtResource("1_tnaun")
shader_parameter/main_color = Color(1, 0.839216, 0.819608, 1)
shader_parameter/flashing_color = Color(0.862745, 0.00392157, 0, 1)
shader_parameter/flashing_enabled = false
shader_parameter/flashing_rate = 2.2

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7e2h2"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2bmq5"]
shader = ExtResource("1_tnaun")
shader_parameter/main_color = Color(1, 0.839216, 0.819608, 1)
shader_parameter/flashing_color = Color(0.862745, 0.00392157, 0, 1)
shader_parameter/flashing_enabled = false
shader_parameter/flashing_rate = 2.2

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ug3g5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3wf33"]
bg_color = Color(0, 0, 0, 0.705882)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 0.705882)

[node name="Pickup" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nbafx")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="Buttons" type="VBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(256, 0)
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="HBoxContainer/Buttons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/separator = SubResource("StyleBoxEmpty_k5yah")

[node name="YesContainer" type="CenterContainer" parent="HBoxContainer/Buttons"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2

[node name="YesButton" type="Button" parent="HBoxContainer/Buttons/YesContainer"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_xfqmf")
layout_mode = 2
focus_neighbor_left = NodePath("../../NoContainer/NoButton")
focus_neighbor_top = NodePath("../../NoContainer/NoButton")
focus_neighbor_right = NodePath("../../NoContainer/NoButton")
focus_neighbor_bottom = NodePath("../../NoContainer/NoButton")
focus_next = NodePath("../../NoContainer/NoButton")
focus_previous = NodePath("../../NoContainer/NoButton")
theme_override_colors/font_outline_color = Color(0.235294, 0.235294, 0.235294, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("1_1jgr7")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxEmpty_7e2h2")
theme_override_styles/hover = SubResource("StyleBoxEmpty_7e2h2")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_7e2h2")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_7e2h2")
theme_override_styles/focus = SubResource("StyleBoxEmpty_7e2h2")
button_mask = 0
text = "Yes
"
script = ExtResource("3_vs0id")

[node name="NoContainer" type="CenterContainer" parent="HBoxContainer/Buttons"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2

[node name="NoButton" type="Button" parent="HBoxContainer/Buttons/NoContainer"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_2bmq5")
layout_mode = 2
focus_neighbor_left = NodePath("../../YesContainer/YesButton")
focus_neighbor_top = NodePath("../../YesContainer/YesButton")
focus_neighbor_right = NodePath("../../YesContainer/YesButton")
focus_neighbor_bottom = NodePath("../../YesContainer/YesButton")
focus_next = NodePath("../../YesContainer/YesButton")
focus_previous = NodePath("../../YesContainer/YesButton")
mouse_filter = 2
theme_override_colors/font_outline_color = Color(0.235294, 0.235294, 0.235294, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("1_1jgr7")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxEmpty_7e2h2")
theme_override_styles/hover = SubResource("StyleBoxEmpty_7e2h2")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_7e2h2")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_7e2h2")
theme_override_styles/focus = SubResource("StyleBoxEmpty_7e2h2")
button_mask = 0
text = "No"
script = ExtResource("3_vs0id")

[node name="HSeparator2" type="HSeparator" parent="HBoxContainer/Buttons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/separator = SubResource("StyleBoxEmpty_ug3g5")

[node name="ItemView" type="Control" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ItemScroll" type="ScrollContainer" parent="HBoxContainer/ItemView"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 200)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.5, 1.5)
pivot_offset = Vector2(100, 100)
mouse_filter = 2
horizontal_scroll_mode = 3
vertical_scroll_mode = 3

[node name="ItemList" parent="HBoxContainer/ItemView/ItemScroll" instance=ExtResource("5_scqo5")]
layout_mode = 2

[node name="Control" type="Control" parent="."]
custom_minimum_size = Vector2(0, 128)
layout_mode = 2
size_flags_horizontal = 3

[node name="Descritpion" type="RichTextLabel" parent="Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -5.5
offset_top = -5.0
offset_right = 5.5
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_colors/default_color = Color(1, 0.85098, 0.831373, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/line_separation = 2
theme_override_fonts/normal_font = ExtResource("1_q5a53")
theme_override_font_sizes/normal_font_size = 29
theme_override_styles/normal = SubResource("StyleBoxFlat_3wf33")
bbcode_enabled = true
text = "[center]You have found %s. Take it?"
fit_content = true
scroll_active = false
autowrap_mode = 0
shortcut_keys_enabled = false
